# logtopus

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md
.circleci/: config.yml
conf/: defaults.yml  docker.yml
docs/: config_response_ideas.txt
src/: cfg.rs  constants.rs  default_config.yml  error.rs  lib.rs  log_merge.rs  main.rs  server.rs  tentacle.rs
src/tentacle/: mod.rs
tests/: docker-compose.yml  integrationtests.yml  integrationtests_1.yml  it_test.yml  server_test.rs  support.rs  test.yml  test_no_alias.yml  testconf.yml
tests/tentacle_1/: testlog.log.1  testlog.log.2  testlog.log.3
tests/tentacle_2/: testlog.log.1  testlog.log.2  testlog.log.3
