[package]
name = "logtopus"
version = "0.1.0"
authors = ["niveau0 <plingplong@t-online.de>", "kodemaniak <carsten@kodemaniak.de>"]
publish = false
description = "Logtopus is the central server connected to its tentacles and providing the API to the Pallium Web UI."
license = "Apache-2.0"
edition = "2018"

[dependencies]
actix = "0.7" # actor framework
actix-web = "0.7" # web serving
hyper = "0.12"
bytes = "0.4"
clap = "2.32" # parse command line options
config = "0.9" # parse config file
log = "0.4" # logging facade
env_logger = "0.6" # log implementation
futures = "0.1"
futures-fs = "0.0.5"
http = "0.1"
tokio = "0.1"
gotham = "0.3.0"
gotham_derive = "0.3.0"
mime = "0.3"
serde = "1"
serde_derive = "1"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
tentacle = { path = "/usr/bin/logtopus" }
