[package]
name = "logtopus"
version = "0.1.0"
authors = ["Carsten Saathoff <carsten@kodemaniak.de>", "niveau0 <plingplong@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.34.0"
kube-derive = "0.34.0"
k8s-openapi = { version = "0.8.0", default-features = false, features = ["v1_17"] }
# async-std = {version = "1.6", features = ["attributes"] }
futures = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
